--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <span id="things_near_you"><img src="/assets/images/ajax-loader.gif" /></span>
         <hr />
         <h2>City Facts</h2>
-        <p><span id="cityinfo"><img src="/assets/images/ajax-loader.gif" />...</span>
+        <p><span id="cityinfo"><img src="/assets/images/ajax-loader.gif" /></span>
         <span id="cityinfo_more"></span></p>
 
         <hr />
