--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src="/config.js"></script>
-        <link rel="stylesheet" href="/style.css" /><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="style.css" /><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="/assets/js/jquery.min.js"></script>
         <script src="/assets/js/todayinmy.js"></script>
         <script src="/assets/js/wikipedia.js"></script>
