--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
     <head>
         <script src="/config.js"></script>
-        <link rel="stylesheet" href="style.css" /><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="style.css" />
+        <link
+                rel="stylesheet"
+                href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+                crossorigin="anonymous"
+                integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+        >
         <script src="/assets/js/jquery.min.js"></script>
         <script src="/assets/js/todayinmy.js"></script>
         <script src="/assets/js/wikipedia.js"></script>
@@ -12,7 +18,7 @@
     </head>
 
     <body>
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-0222425781505632"
